<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="My_Apps">My Nanodegree Apps!</string>
    <string name="Spotify_streamer">Spotify Streamer</string>
    <string name="Scores_app">Scores App</string>
    <string name="Library_app">Library App</string>
    <string name="build_it_bigger">Build it bigger</string>
    <string name="Bacon_reader">Bacon Reader</string>
    <string name="Capstone_my_own_app">Capstone: My own app</string>
</resources>
